--- a/app/assets/views/upload.html
+++ b/app/assets/views/upload.html
@@ -7,7 +7,7 @@
 <img id="mic" src="assets/Untitled.png" alt="" ng-show="!show">
 
 <div class="upload">
-  <h2>Upload Your Riff</h2>
+  <h2>Upload Your Riff(mp3)</h2>
 
   <form class="uploadRiff" ng-upload="uploadComplete(content)" action="/riffblobs.json">
       <span>Name Your Riff:</span><input type="text" name="fullname" ng-model="response.fullname">
