--- a/app/views/profiles/_new.html.haml
+++ b/app/views/profiles/_new.html.haml
@@ -1,4 +1,4 @@
-.form
+.form{ :remote => true, :multipart => true}
   %input.avatar{type: "file"}
   %br
   %input.firstName{type: "text", placeholder: "first name"}
