fixed splash vid '

--- a/app/assets/views/splash.html
+++ b/app/assets/views/splash.html
@@ -1,7 +1,7 @@
 <h1 class="splash">riff</h1>
 <a class="splashlink" href="#/upload">Upload New Riff</a><a class="splashlink" href="#/main">See Your Riffs</a>
 <video autoplay loop muted id="bgvid">
-  <source src="assets/RiffVid.mov" type="video/mp4">
+  <source src="assets/RiffVid.mp4" type="video/mp4">
 </video>
 <!-- <script>
 var vid = document.getElementById("bgvid");
